Added Lefschetz talk

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -153,6 +153,7 @@
         <q>Betti tables and Lefschetz properties</q>, Purdue University Student Commutative Algebra Seminar
         <span style="float:right">October 2024</span>
         <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/lefschetz/purdue_presentation.html" target="_blank">Slides</a> | 
         Abstract 
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
