--- a/talks/index.html
+++ b/talks/index.html
@@ -151,7 +151,7 @@
       city: 'West Lafayette, IN',
       extras: { notes: '', 
                 code: '', 
-                slides: '', 
+                slides: '../misc/slides/lefschetz/purdue_presentation.html', 
                 video: '',
                 abstract: 'For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution. '
                           + 'This can then be summarized with a Betti diagram which, in some sense, describes the complexity of the ring. '
