--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -126,14 +126,29 @@
         <q>Betti tables forcing failure of the weak Lefschetz property</q>, University of Nebraska-Lincoln Commutative Algebra Seminar
         <span style="float:right">October 2024</span>
         <br>
-        <br>
+        Abstract 
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution, in turn summarized by a Betti table. 
+          If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank. 
+          Joint with Hal Schenck, we show that if the Betti table of an Artinian algebra has a certain substructure resembling a Koszul complex, then the Artinian algebra cannot have the WLP.
+        </blockquote>
       </li>
+      <br>
       <li>
-        <q>TBD</q>, University of Nebraska-Lincoln Commutative Algebra Reading Seminar (CARS)
+        <q>Betti tables and Lefschetz properties</q>, University of Nebraska-Lincoln Commutative Algebra Reading Seminar (CARS)
         <span style="float:right">October 2024</span>
         <br>
-        <br>
+        Abstract 
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution. 
+          This can then be summarized with a Betti table which, in some sense, describes the complexity of the ring. 
+          If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank. 
+          I will go through the background material necessary to be able to understand the follow-up talk in the Commutative Algebra Seminar.
+        </blockquote>
       </li>
+      <br>
       <li>
         <q>Betti numbers of connected sums of graded Artinian Gorenstein algebras</q>, Purdue University Commutative Algebra Seminar
         <span style="float:right">October 2024</span>
@@ -199,6 +214,20 @@
       <li>
         Auburn University
         <ul>
+          <li>
+            <q>The stable Tamari lattice</q>, Discrete Math Seminar
+            <span style="float:right">November 2024</span>
+            <br>
+            Abstract 
+            <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+            <blockquote class="abstract-content">
+              The stable Tamari lattice was introduced by Haiman through the lens of invariant polynomials, extended by Bergeron-Preville-Ratelle, and is a variation of the Tamari lattice. 
+              Stemming from the AMS MRC: Algebraic Combinatorics this past summer, I will describe some work in progress joint with Anna Pun, Herman Chau, Spencer Daugherty, and Juan Carlos Martínez Mori where we describe the combinatorics of this lattice. 
+              Namely, I will present properties of the lower order ideals of this lattice, the cover relations, and some enumeration problems we are tackling. 
+              I will discuss this data through some examples and Python code.
+            </blockquote>
+          </li>
+          <br>
           <li>
             <q>Betti numbers of connected sums of graded Artinian Gorenstein algebras</q>, Algebra Seminar
             <span style="float:right">September 2024</span>
