--- a/talks/index.html
+++ b/talks/index.html
@@ -111,6 +111,19 @@
                 video: '',
                 abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
                           + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup, and is bounded by the area of the associated polygon.' } },
+    { title: 'The stable Tamari lattice', 
+      date: new Date('2024-11-06'), 
+      venue: 'Discrete Math Seminar',
+      location: 'Auburn University',
+      city: 'Auburn, AL',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'The stable Tamari lattice was introduced by Haiman through the lens of invariant polynomials, extended by Bergeron-Preville-Ratelle, and is a variation of the Tamari lattice. '
+                          + 'Stemming from the AMS MRC: Algebraic Combinatorics this past summer, I will describe some work in progress joint with Anna Pun, Herman Chau, Spencer Daugherty, and Juan Carlos Martínez Mori where we describe the combinatorics of this lattice. '
+                          + 'Namely, I will present properties of the lower order ideals of this lattice, the cover relations, and some enumeration problems we are tackling. '
+                          + 'I will discuss this data through some examples and Python code.' } },
     { title: 'Betti tables forcing failure of the weak Lefschetz property', 
       date: new Date('2024-10-16'), 
       venue: 'Commutative Algebra Seminar',
@@ -120,8 +133,10 @@
                 code: '', 
                 slides: '', 
                 video: '',
-                abstract: '' } },
-    { title: 'TBD', 
+                abstract: 'For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution, in turn summarized by a Betti table. '
+                          + 'If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank. '
+                          + 'Joint with Hal Schenck, we show that if the Betti table of an Artinian algebra has a certain substructure resembling a Koszul complex, then the Artinian algebra cannot have the WLP.' } },
+    { title: 'Betti tables and Lefschetz properties', 
       date: new Date('2024-10-16'), 
       venue: 'Commutative Algebra Reading Seminar',
       location: 'University of Nebraska-Lincoln',
@@ -130,7 +145,10 @@
                 code: '', 
                 slides: '', 
                 video: '',
-                abstract: '' } },
+                abstract: 'For most rings, a lot of the data of the ring can be captured via its (minimal) free resolution. '
+                          + 'This can then be summarized with a Betti table which, in some sense, describes the complexity of the ring. '
+                          + 'If such a ring is also Artinian, the ring is said to have the weak Lefschetz property (WLP) if multiplication by some linear form is always full rank. '
+                          + 'I will go through the background material necessary to be able to understand the follow-up talk in the Commutative Algebra Seminar.' } },
     { title: 'Betti numbers of connected sums of graded Artinian Gorenstein algebras', 
       date: new Date('2024-10-09'), 
       venue: 'Commutative Algebra Seminar',
