Added job application materials

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
     <p>
       My primary research interests lie in commutative algebra, algebraic geometry, algebraic combinatorics, and data analysis.
       I am particularly interested in problems that can be approached via computation.
-      I will be on the job market this fall.
-      A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
+      I will be on the job market this fall; here are some of my supporting materials: <a class="weblink" href="./misc/CV.pdf">CV</a>, <a class="weblink" href="./misc/ResearchProgram.pdf">research program</a>, <a class="weblink" href="./misc/TeachingStatement.pdf">teaching statement</a>.
     </p>
     <hr>
   </div>
