Updated Permutations link

--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/M2/tree/permutations" target="_blank"><img src="./images/permutations.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/Permutations/html/index.html" target="_blank"><img src="./images/permutations.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p style="font-family: Lucida Console, monospace;"><b>Permutations</b></p>
-        <p>A Macaulay2 package implementing permutations (in progress).</p>
+        <p>A Macaulay2 package implementing permutations.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
