--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   </div>
   <div class="w3-bar-block">
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
-    <a href="#papers" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text-o w3-margin-right"></i>PAPERS</a>
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-university w3-margin-right"></i>RESEARCH</a>
     <a href="#software" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-terminal w3-margin-right"></i>SOFTWARE</a> 
+    <a href="#papers" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-file-text-o w3-margin-right"></i>PAPERS</a>
     <a href="./talks/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-microphone w3-margin-right"></i>TALKS</a>
     <a href="./teaching/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-graduation-cap w3-margin-right"></i>TEACHING</a>
     <a href="./outreach/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-users w3-margin-right"></i>OUTREACH</a>
@@ -72,12 +72,87 @@
     <p>
       My primary research interests lie in commutative algebra, algebraic geometry, algebraic combinatorics, and data analysis.
       I am particularly interested in problems that can be approached via computation.
-      I will be on the job market this fall; here are some of my supporting materials: <a class="weblink" href="./misc/CV.pdf">CV</a>, <a class="weblink" href="./misc/ResearchProgram.pdf">research program</a>, <a class="weblink" href="./misc/TeachingStatement.pdf">teaching statement</a>.
+      I am on the job market; here are some of my supporting materials: <a class="weblink" href="./misc/CV.pdf">CV</a>, <a class="weblink" href="./misc/ResearchProgram.pdf">research program</a>, <a class="weblink" href="./misc/TeachingStatement.pdf">teaching statement</a>, <a class="weblink" href="./misc/ServiceStatement.pdf">service statement</a>.
     </p>
     <hr>
   </div>
 
-  <!-- Publications -->
+  <!-- Research -->
+  <div class="w3-container w3-row-padding">
+    <h2 id="research"><b>Research</b></h2>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <div class="w3-container w3-white">
+        <a class="weblink" href="./regularity/"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
+        <p><b>Castelnuovo-Mumford Regularity</b></p>
+        <p>How complicated can the generators and relations of a module be?</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="./tamari/"><img src="./images/tamari/hasse_123.png" alt="tamari hasse 123" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Stable Tamari Lattice</b></p>
+        <p>The combinatorics of posets in the stable Tamari lattice.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <div class="w3-container w3-white">
+        <a class="weblink" href="./lefschetz/"><img src="./images/lefschetz/hypersurface.png" alt="hypersurface" style="width:100%" class="w3-hover-opacity"></a>
+        <p><b>Lefschetz Properties</b></p>
+        <p>When does multiplication by a linear form have full rank in an Artinian algebra?</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="./tda/"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Topological Data Analysis</b></p>
+        <p>Use techniques from computational topology to analyze and exploit the shape of data.</p>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Software -->
+  <br>
+  <div class="w3-container w3-row-padding">
+    <h2 id="software"><b>Software</b></h2>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html" target="_blank"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p style="font-family: Lucida Console, monospace;"><b>MatrixSchubert</b></p>
+        <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://github.com/TheGrateSalmon/CAAT" target="_blank"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>CAAT</b></p>
+        <p>A tool to help analyze course alignment.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/Permutations/html/index.html" target="_blank"><img src="./images/permutations.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p style="font-family: Lucida Console, monospace;"><b>Permutations</b></p>
+        <p>A Macaulay2 package implementing permutations.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://github.com/TheGrateSalmon/MinimalOutNeighborhoods" target="_blank"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Minimal Out-Neighborhoods</b></p>
+        <p>Python scripts for computing minimal out-neighborhoods (and some statistics) in the \( F \)-lattice.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://github.com/TheGrateSalmon/Tropical-Curves" target="_blank"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Tropical Curves</b></p>
+        <p>Python scripts for visualizing tropical curves.</p>
+      </div>
+    </div>
+    <hr>
+  </div>
+
+    <!-- Publications -->
   <div class="w3-container w3-padding-large w3-row-padding">
     <h2 id="papers"><b>Papers</b></h2>
     <div class="w3-container">
@@ -173,7 +248,7 @@
         <li>
           <div>
             <span style="display:inline-block; width:50%">Graph Theoretic Reflection to Foster Alignment in Coordinated Courses</span>
-            <span style="float:right; width:30%"><em>Submitted</em></span>
+            <span style="float:right; width:30%"><em>Positive referee reports, now in revision</em></span>
           </div>
           <br>
           <span style="display:inline-block; width:50%"><em>
@@ -199,7 +274,7 @@
         <li>
           <div>
             <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2312.07393" target="_blank">The MatrixSchubert package for Macaulay2</a></span>
-            <span style="float:right; width:30%"><em>Submitted</em></span>
+            <span style="float:right; width:30%"><em>Positive referee reports, now in revision</em></span>
           </div>
           <br>
           <span style="display:inline-block; width:50%"><em>
@@ -225,81 +300,6 @@
           <br>
         </li>       
     </ol>
-    </div>
-    <hr>
-  </div>
-
-  <!-- Research -->
-  <div class="w3-container w3-row-padding">
-    <h2 id="research"><b>Research</b></h2>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <div class="w3-container w3-white">
-        <a class="weblink" href="./regularity/"><img src="./images/regularity/hochster.png" alt="hochster" style="width:100%" class="w3-hover-opacity"></a>
-        <p><b>Castelnuovo-Mumford Regularity</b></p>
-        <p>How complicated can the generators and relations of a module be?</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./tamari/"><img src="./images/tamari/hasse_123.png" alt="tamari hasse 123" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Stable Tamari Lattice</b></p>
-        <p>The combinatorics of posets in the stable Tamari lattice.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <div class="w3-container w3-white">
-        <a class="weblink" href="./lefschetz/"><img src="./images/lefschetz/hypersurface.png" alt="hypersurface" style="width:100%" class="w3-hover-opacity"></a>
-        <p><b>Lefschetz Properties</b></p>
-        <p>When does multiplication by a linear form have full rank in an Artinian algebra?</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="./tda/"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Topological Data Analysis</b></p>
-        <p>Use techniques from computational topology to analyze and exploit the shape of data.</p>
-      </div>
-    </div>
-  </div>
-  
-  <!-- Software -->
-  <br>
-  <div class="w3-container w3-row-padding">
-    <h2 id="software"><b>Software</b></h2>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html" target="_blank"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p style="font-family: Lucida Console, monospace;"><b>MatrixSchubert</b></p>
-        <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/CAAT" target="_blank"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>CAAT</b></p>
-        <p>A tool to help analyze course alignment.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/Permutations/html/index.html" target="_blank"><img src="./images/permutations.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p style="font-family: Lucida Console, monospace;"><b>Permutations</b></p>
-        <p>A Macaulay2 package implementing permutations.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/MinimalOutNeighborhoods" target="_blank"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Minimal Out-Neighborhoods</b></p>
-        <p>Python scripts for computing minimal out-neighborhoods (and some statistics) in the \( F \)-lattice.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/Tropical-Curves" target="_blank"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>Tropical Curves</b></p>
-        <p>Python scripts for visualizing tropical curves.</p>
-      </div>
     </div>
     <hr>
   </div>
