--- a/travel/condensed.html
+++ b/travel/condensed.html
@@ -28,7 +28,7 @@
     </a>
     <img src="../images/travel/golden_gate_bridge.jpg" style="width:100%;" class="w3-round"><br><br>
     <h4><b>Travel</b></h4>
-    <p class="w3-text-grey">Places I have been for conferences, workshops, and seminars.</p>
+    <p class="w3-text-grey">Places I have been for conferences, workshops, and summer schools.</p>
   </div>
   <div class="w3-bar-block">
     <a href="../" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-arrow-left fa-fw w3-margin-right"></i>GO HOME</a> 
@@ -53,6 +53,21 @@
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <p>
       <ul>
+        <li>
+          Combinatorial Algebra meets Algebraic Combinatorics (CAAC)
+          <span style="float:right">January 2025</span>
+        </li>
+        <br>
+        <li>
+          Apprenticeship Program in Commutative Algebra
+          <span style="float:right">January 2025</span>
+        </li>
+        <br>
+        <li>
+          Joint Mathematics Meetings
+          <span style="float:right">January 2025</span>
+        </li>
+        <br>
         <li>
           AMS Fall Central Sectional Meeting
           <span style="float:right">September 2024</span>
@@ -79,7 +94,7 @@
         </li>
         <br>
         <li>
-          Combinatorial Algebra meets Algebraic Combinatorics
+          Combinatorial Algebra meets Algebraic Combinatorics (CAAC)
           <span style="float:right">January 2024</span>
         </li>
         <br>
