--- a/travel/index.html
+++ b/travel/index.html
@@ -100,68 +100,83 @@
 <script>
   // timeline data
   const timelineEvents = [
+  { title: 'Combinatorial Algebra meets Algebraic Combinatorics (CAAC)', 
+    date: new Date(2025, 1), 
+    location: 'Fields Institute and University of Toronto',
+    city: 'Toronto, ON',
+    extras: { } },
+  { title: 'Apprenticeship in Commutative Algebra', 
+    date: new Date(2025, 1), 
+    location: 'Fields Institute',
+    city: 'Toronto, ON',
+    extras: { } },
+  { title: 'Joint Mathematics Meetings', 
+    date: new Date(2025, 1), 
+    location: 'Seattle Convention Center',
+    city: 'Seattle, WA',
+    extras: { } },
   { title: 'AMS Fall Central Sectional Meeting', 
-    date: new Date('2024-09'), 
+    date: new Date(2024, 9), 
     location: 'University of Texas, San Antonio',
     city: 'San Antonio, TX',
     extras: { } },
   { title: 'UweFest', 
-    date: new Date('2024-08'), 
+    date: new Date(2024, 8), 
     location: 'Notre Dame University',
     city: 'South Bend, IN',
     extras: { } },
   { title: 'AMS MRC: Algebraic Combinatorics', 
-    date: new Date('2024-06'), 
+    date: new Date(2024, 6), 
     location: 'Beaver Hollow Resort',
     city: 'Beaver Hollow, NY',
     extras: { } },
   { title: 'Computational Algebraic Geometry and String Theory', 
-    date: new Date('2024-05'), 
+    date: new Date(2024, 5), 
     location: 'University of Utah',
     city: 'Salt Lake City, UT',
     extras: { } },
   { title: 'JM Invariant at 60', 
-    date: new Date('2024-05'), 
+    date: new Date(2024, 5), 
     location: 'Auburn University',
     city: 'Auburn, AL',
     extras: { } },
   { title: 'Combinatorial Algebra meets Algebraic Combinatorics', 
-    date: new Date('2024-01'), 
+    date: new Date(2024, 1), 
     location: 'Université du Québec à Montréal',
     city: 'Montréal, QC',
     extras: { } },
   { title: 'SIAM Texas-Louisiana Sectional Meeting', 
-    date: new Date('2023-11'), 
+    date: new Date(2023, 11), 
     location: 'University of Louisiana at Lafayette',
     city: 'Lafayette, LA',
     extras: { } },
   { title: 'BrianFest', 
-    date: new Date('2023-08'), 
+    date: new Date(2023, 8), 
     location: 'University of Nebraska-Lincoln',
     city: 'Lincoln, NE',
     extras: { } },
   { title: 'Macaulay2 Week', 
-    date: new Date('2023-06'), 
+    date: new Date(2023, 6), 
     location: 'University of Minnesota',
     city: 'Minneapolis, MN',
     extras: { } },
   { title: 'SLMath Commutative Algebra Summer School', 
-    date: new Date('2023-05'), 
+    date: new Date(2023, 5), 
     location: 'Notre Dame University',
     city: 'South Bend, IN',
     extras: { } },
   { title: 'Workshop on Lefschetz Properties in Algebra, Geometry, Topology and Combinatorics',
-    date: new Date('2023-05'), 
+    date: new Date(2023, 5), 
     location: 'Fields Institute',
     city: 'Toronto, ON',
     extras: { } },
   { title: 'Commutative Algebra in the South', 
-    date: new Date('2023-04'), 
+    date: new Date(2023, 4), 
     location: 'University of Alabama',
     city: 'Tuscaloosa, AL',
     extras: { } },
   { title: 'SLMath Tropical Geometry Summer School', 
-    date: new Date('2022-08'), 
+    date: new Date(2022, 8), 
     location: 'St. Mary\'s College',
     city: 'Moraga, CA',
     extras: { } }
@@ -191,8 +206,10 @@
     const title = document.createElement('h4');
     title.innerText = `${event.title}`;
     const details = document.createElement('p');
-    details.innerText = `${event.location}, ${event.city}
-                         ${months[event.date.getMonth() + 1]} ${event.date.getFullYear()}`;
+    details.innerText = `${event.location}
+                         ${event.city}
+                         
+                         ${months[event.date.getMonth() - 1]} ${event.date.getFullYear()}`;
     // extra links
     const extrasElements = [];
     const extraIcons = {
