Added slides for JMM talk

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -59,7 +59,8 @@
         <q>Castelnuovo-Mumford regularity of toric surfaces</q>, Joint Mathematics Meetings (JMM)
         <span style="float:right">January 2025</span>
         <br>
-        Abstract 
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/jmm/regularity.pdf" target="_blank">Slides</a> | 
+        Abstract
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
         <blockquote class="abstract-content">
           In 1996, L'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup's two largest gaps.
