--- a/travel/condensed.html
+++ b/travel/condensed.html
@@ -54,6 +54,46 @@
     <p>
       <ul>
         <li>
+          SIAM AG2025
+          <span style="float:right">July 2025</span>
+        </li>
+        <br>
+        <li>
+          Collaborate@ICERM
+          <span style="float:right">June 2025</span>
+        </li>
+        <br>
+        <li>
+          Workshop on Weak and Strong Lefschetz Properties Across Mathematics
+          <span style="float:right">June 2025</span>
+        </li>
+        <br>
+        <li>
+          AWM Research Symposium
+          <span style="float:right">May 2025</span>
+        </li>
+        <br>
+        <li>
+          Meetings in Applied Algebraic Geometry (MAAG)
+          <span style="float:right">April 2025</span>
+        </li>
+        <br>
+        <li>
+          Commutative Algebra in the South (CATS)
+          <span style="float:right">April 2025</span>
+        </li>
+        <br>
+        <li>
+          Mid-Atlantic Algebra, Geometry, and Combinatorics Conference (MAAGC)
+          <span style="float:right">March 2025</span>
+        </li>
+        <br>
+        <li>
+          CA+
+          <span style="float:right">March 2025</span>
+        </li>
+        <br>
+        <li>
           Combinatorial Algebra meets Algebraic Combinatorics (CAAC)
           <span style="float:right">January 2025</span>
         </li>
