--- a/travel/index.html
+++ b/travel/index.html
@@ -100,6 +100,46 @@
 <script>
   // timeline data
   const timelineEvents = [
+  { title: 'SIAM AG2025', 
+    date: new Date(2025, 7), 
+    location: 'University of Wisconsin-Madison',
+    city: 'Madison, WI',
+    extras: { } },
+  { title: 'Collaborate@ICERM', 
+    date: new Date(2025, 6), 
+    location: 'ICERM',
+    city: 'Providence, RI',
+    extras: { } },
+  { title: 'Workshop on Weak and Strong Lefschetz Properties Across Mathematics', 
+    date: new Date(2025, 6), 
+    location: 'Sophus Lie Conference Center',
+    city: 'Nordfjordeid, Norway',
+    extras: { } },
+  { title: 'AWM Research Symposium', 
+    date: new Date(2025, 5), 
+    location: 'University of Wisconsin-Madison',
+    city: 'Madison, WI',
+    extras: { } },
+  { title: 'Meetings in Applied Algebraic Geometry (MAAG)', 
+    date: new Date(2025, 4), 
+    location: 'Auburn University',
+    city: 'Auburn, AL',
+    extras: { } },
+  { title: 'Commutative Algebra in the South (CATS)', 
+    date: new Date(2025, 4), 
+    location: 'Georgia State University',
+    city: 'Atlanta, GA',
+    extras: { } },
+  { title: 'Mid-Atlantic Algebra, Geometry, and Combinatorics Conference (MAAGC)', 
+    date: new Date(2025, 3), 
+    location: 'CUNY',
+    city: 'New York City, NY',
+    extras: { } },
+  { title: 'CA+', 
+    date: new Date(2025, 3), 
+    location: 'Iowa State University',
+    city: 'Ames, IA',
+    extras: { } },
   { title: 'Combinatorial Algebra meets Algebraic Combinatorics (CAAC)', 
     date: new Date(2025, 1), 
     location: 'Fields Institute and University of Toronto',
