Updated job stuff

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p>
       My primary research interests lie in commutative algebra, algebraic geometry, algebraic combinatorics, and data analysis.
       I am particularly interested in problems that can be approached via computation.
-      I am on the job market; here are some of my supporting materials: <a class="weblink" href="./misc/CV.pdf">CV</a>, <a class="weblink" href="./misc/ResearchProgram.pdf">research program</a>, <a class="weblink" href="./misc/TeachingStatement.pdf">teaching statement</a>, <a class="weblink" href="./misc/ServiceStatement.pdf">service statement</a>.
+      <!-- I am on the job market; here are some of my supporting materials: <a class="weblink" href="./misc/CV.pdf">CV</a>, <a class="weblink" href="./misc/ResearchProgram.pdf">research program</a>, <a class="weblink" href="./misc/TeachingStatement.pdf">teaching statement</a>, <a class="weblink" href="./misc/ServiceStatement.pdf">service statement</a>. -->
     </p>
     <hr>
   </div>
