Updated talks and minor corrections to names

--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -56,6 +56,32 @@
   <p>
     <ul>
       <li>
+        <q>Castelnuovo-Mumford regularity of toric surfaces</q>, SIAM AG25
+        <span style="float:right">July 2025</span>
+        <br>
+        Abstract
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          In 1996, L'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup's two largest gaps.
+          We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.
+        </blockquote>
+        <br>
+      </li>
+      <br>
+      <li>
+        <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, Joint Mathematics Meetings (JMM)
+        <span style="float:right">January 2025</span>
+        <br>
+        Abstract
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          In 1996, L'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup's two largest gaps.
+          We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.
+        </blockquote>
+        <br>
+      </li>
+      <br>
+      <li>
         <q>Castelnuovo-Mumford regularity of toric surfaces</q>, Joint Mathematics Meetings (JMM)
         <span style="float:right">January 2025</span>
         <br>
@@ -123,6 +149,20 @@
   <h2><b>Seminar Talks</b></h2>
   <p>
     <ul>
+      <li>
+        <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, Syzygies and Mirror Symmetry Seminar
+        <span style="float:right">February 2025</span>
+        <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="../misc/slides/mirror/regularity.pdf" target="_blank">Slides</a> | 
+        Abstract
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          In 1996, L'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup's two largest gaps.
+          We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.
+        </blockquote>
+        <br>
+      </li>
+      <br>
       <li>
         <q>Betti tables forcing failure of the weak Lefschetz property</q>, University of Nebraska-Lincoln Commutative Algebra Seminar
         <span style="float:right">October 2024</span>
