--- a/travel/condensed.html
+++ b/travel/condensed.html
@@ -54,7 +54,7 @@
     <p>
       <ul>
         <li>
-          SIAM AG2025
+          SIAM AG25
           <span style="float:right">July 2025</span>
         </li>
         <br>
@@ -84,7 +84,7 @@
         </li>
         <br>
         <li>
-          Mid-Atlantic Algebra, Geometry, and Combinatorics Conference (MAAGC)
+          Mid-Atlantic Algebra, Geometry, and Combinatorics Conference (MAAGC) Workshop
           <span style="float:right">March 2025</span>
         </li>
         <br>
