--- a/travel/index.html
+++ b/travel/index.html
@@ -100,7 +100,7 @@
 <script>
   // timeline data
   const timelineEvents = [
-  { title: 'SIAM AG2025', 
+  { title: 'SIAM AG25', 
     date: new Date(2025, 7), 
     location: 'University of Wisconsin-Madison',
     city: 'Madison, WI',
@@ -130,7 +130,7 @@
     location: 'Georgia State University',
     city: 'Atlanta, GA',
     extras: { } },
-  { title: 'Mid-Atlantic Algebra, Geometry, and Combinatorics Conference (MAAGC)', 
+  { title: 'Mid-Atlantic Algebra, Geometry, and Combinatorics Conference (MAAGC) Workshop', 
     date: new Date(2025, 3), 
     location: 'CUNY',
     city: 'New York City, NY',
