--- a/talks/index.html
+++ b/talks/index.html
@@ -101,6 +101,39 @@
     // timeline data
     const timelineEvents = [
     { title: 'Castelnuovo-Mumford regularity of toric surfaces', 
+      date: new Date('2025-07-08'), 
+      venue: 'SIAM AG25',
+      location: 'University of Wisconsin-Madison',
+      city: 'Madison, WI',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
+                          + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.' } },
+    { title: 'Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
+      date: new Date('2025-05-16'), 
+      venue: 'AWM Research Symposium',
+      location: 'University of Wisconsin-Madison',
+      city: 'Madison, WI',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
+                          + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.' } },
+    { title: 'Cobminatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
+      date: new Date('2025-02-20'), 
+      venue: 'Syzygies and Mirror Symmetry Seminar',
+      location: '',
+      city: 'Virtual',
+      extras: { notes: '', 
+                code: '', 
+                slides: '../misc/slides/mirror/regularity.pdf', 
+                video: '',
+                abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
+                          + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.' } },
+    { title: 'Castelnuovo-Mumford regularity of toric surfaces', 
       date: new Date('2025-01-11'), 
       venue: 'Joint Mathematics Meetings',
       location: 'Seattle Convention Center',
