--- a/talks/condensed.html
+++ b/talks/condensed.html
@@ -69,8 +69,8 @@
       </li>
       <br>
       <li>
-        <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, Joint Mathematics Meetings (JMM)
-        <span style="float:right">January 2025</span>
+        <q>Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces</q>, AWM Research Symposium
+        <span style="float:right">May 2025</span>
         <br>
         Abstract
         <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
