--- a/talks/index.html
+++ b/talks/index.html
@@ -125,7 +125,7 @@
     { title: 'Cobminatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
       date: new Date('2025-02-20'), 
       venue: 'Syzygies and Mirror Symmetry Seminar',
-      location: '',
+      location: 'Zoom',
       city: 'Virtual',
       extras: { notes: '', 
                 code: '', 
