--- a/index.html
+++ b/index.html
@@ -158,11 +158,40 @@
     <div class="w3-container">
     <h4><b>Publications</b></h4>
     <ol reversed>
+      <!-- MatrixSchubert -->
+      <li>
+        <div>
+          <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2312.07393" target="_blank">The MatrixSchubert package for Macaulay2</a></span>
+          <span style="float:right; width:30%"><em>Journal of Software for Algebra and Geometry, to appear</em></span>
+        </div>
+        <br>
+        <span style="display:inline-block; width:50%"><em>
+          Joint with <a class="weblink" href="https://sites.google.com/view/ayah-almousa/" target="_blank">Ayah Almousa</a>, 
+          <a class="weblink" href="https://www.daojihuang.me/" target="_blank">Daoji Huang</a>,
+          <a class="weblink" href="https://patriciajklein.github.io/" target="_blank">Patricia Klein</a>,
+          <a class="weblink" href="https://sites.google.com/view/adamlaclair/home" target="_blank">Adam LaClair</a>,
+          <a class="weblink" href="https://www.mit.edu/~lyuyuan/" target="_blank">Yuyuan Luo</a>,
+          and <a class="weblink" href="https://jmcdonough98.github.io/" target="_blank">Joseph McDonough</a>
+        </em></span>
+        <br>
+        <br>
+        <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/matrix_schubert.pdf">PDF</a> | 
+        <i class="fa fa-keyboard-o"></i> <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html">Code</a> | 
+        Abstract 
+        <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
+        <blockquote class="abstract-content">
+          We introduce the MatrixSchubert package for the computer algebra system Macaulay2. 
+          This package has tools to construct and study matrix Schubert varieties and alternating sign matrix (ASM) varieties. 
+          The package also introduces tools for quickly computing homological invariants of such varieties, finding the components of an ASM variety, and checking if a union of matrix Schubert varieties is an ASM variety. 
+        </blockquote>
+        <br>
+        <br>
+      </li>   
       <!-- Connected sums -->
       <li>
         <div>
           <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2401.10492" target="_blank">Betti numbers for connected sums of graded Gorenstein artinian algebras</a></span>
-          <span style="float:right; width:30%"><em>Transactions of the AMS, to appear.</em></span>
+          <span style="float:right; width:30%"><em>Transactions of the AMS</em></span>
         </div>
         <br>
         <span style="display:inline-block; width:50%"><em>
@@ -193,7 +222,7 @@
       <li>
         <div>
           <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a></span>
-          <span style="float:right; width:30%"><em>Lefschetz Properties: Current and New Directions, Springer INdAM series, to appear</em></span>
+          <span style="float:right; width:30%"><em>Lefschetz Properties: Current and New Directions, Springer INdAM series</em></span>
         </div>
         <br>
         <span style="display:inline-block; width:50%"><em>
@@ -269,36 +298,7 @@
           </blockquote>
           <br>
           <br>
-        </li>
-        <!-- MatrixSchubert -->
-        <li>
-          <div>
-            <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2312.07393" target="_blank">The MatrixSchubert package for Macaulay2</a></span>
-            <span style="float:right; width:30%"><em>Positive referee reports, now in revision</em></span>
-          </div>
-          <br>
-          <span style="display:inline-block; width:50%"><em>
-            Joint with <a class="weblink" href="https://sites.google.com/view/ayah-almousa/" target="_blank">Ayah Almousa</a>, 
-            <a class="weblink" href="https://www.daojihuang.me/" target="_blank">Daoji Huang</a>,
-            <a class="weblink" href="https://patriciajklein.github.io/" target="_blank">Patricia Klein</a>,
-            <a class="weblink" href="https://sites.google.com/view/adamlaclair/home" target="_blank">Adam LaClair</a>,
-            <a class="weblink" href="https://www.mit.edu/~lyuyuan/" target="_blank">Yuyuan Luo</a>,
-            and <a class="weblink" href="https://jmcdonough98.github.io/" target="_blank">Joseph McDonough</a>
-          </em></span>
-          <br>
-          <br>
-          <i class="fa fa-file-pdf-o"></i> <a class="weblink" href="./misc/papers/matrix_schubert.pdf">PDF</a> | 
-          <i class="fa fa-keyboard-o"></i> <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MatrixSchubert/html/index.html">Code</a> | 
-          Abstract 
-          <a class="abstract-button" onclick="toggleAbstract(this)"><i class="fa fa-plus-square-o"></i></a>
-          <blockquote class="abstract-content">
-            We introduce the MatrixSchubert package for the computer algebra system Macaulay2. 
-            This package has tools to construct and study matrix Schubert varieties and alternating sign matrix (ASM) varieties. 
-            The package also introduces tools for quickly computing homological invariants of such varieties, finding the components of an ASM variety, and checking if a union of matrix Schubert varieties is an ASM variety. 
-          </blockquote>
-          <br>
-          <br>
-        </li>       
+        </li>    
     </ol>
     </div>
     <hr>
