Updated travel info

--- a/travel/condensed.html
+++ b/travel/condensed.html
@@ -54,6 +54,11 @@
     <p>
       <ul>
         <li>
+          Mathematical Congress of the Americas
+          <span style="float:right">July 2025</span>
+        </li>
+        <br>
+        <li>
           SIAM AG25
           <span style="float:right">July 2025</span>
         </li>
@@ -75,6 +80,11 @@
         <br>
         <li>
           Meetings in Applied Algebraic Geometry (MAAG)
+          <span style="float:right">April 2025</span>
+        </li>
+        <br>
+        <li>
+          Macaulay2 Workshop
           <span style="float:right">April 2025</span>
         </li>
         <br>
