--- a/travel/index.html
+++ b/travel/index.html
@@ -100,6 +100,11 @@
 <script>
   // timeline data
   const timelineEvents = [
+  { title: 'Mathematical Congress of the Americas', 
+    date: new Date(2025, 7), 
+    location: 'University of Miami',
+    city: 'Miami, FL',
+    extras: { } },
   { title: 'SIAM AG25', 
     date: new Date(2025, 7), 
     location: 'University of Wisconsin-Madison',
@@ -124,6 +129,11 @@
     date: new Date(2025, 4), 
     location: 'Auburn University',
     city: 'Auburn, AL',
+    extras: { } },
+  { title: 'Macaulay2 Workshop', 
+    date: new Date(2025, 4), 
+    location: 'Tulane University',
+    city: 'New Orleans, LA',
     extras: { } },
   { title: 'Commutative Algebra in the South (CATS)', 
     date: new Date(2025, 4), 
