--- a/talks/index.html
+++ b/talks/index.html
@@ -100,6 +100,17 @@
 <script>
     // timeline data
     const timelineEvents = [
+    { title: 'Combinatorial bounds on the Castelnuovo-Mumford regularity of toric surfaces', 
+      date: new Date('2025-05-16'), 
+      venue: 'Mathematical Congress of the Americas',
+      location: 'University of Miami',
+      city: 'Miami, FL',
+      extras: { notes: '', 
+                code: '', 
+                slides: '', 
+                video: '',
+                abstract: 'In 1996, L\'vovsky showed the Castelnuovo-Mumford regularity of the coordinate ring of a monomial curve is bounded by the sum of its semigroup\'s two largest gaps. '
+                          + 'We explore analogous results for toric surfaces embedded by incomplete linear systems, and show that for certain classes the regularity is controlled by the combinatorics of the associated semigroup.' } },
     { title: 'Castelnuovo-Mumford regularity of toric surfaces', 
       date: new Date('2025-07-08'), 
       venue: 'SIAM AG25',
