Updated with new GitHub username

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a href="./past-projects/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-fw fa-pencil w3-margin-right"></i>PAST PROJECTS</a>
   </div>
   <div class="w3-panel w3-large">
-    <a class="weblink" href="https://github.com/TheGrateSalmon" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a class="weblink" href="https://github.com/seangrate" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
     <a class="weblink" href="mailto:sean.grate@auburn.edu"><i class="fa fa-envelope w3-hover-opacity"></i></a>
   </div>
 </nav>
@@ -122,7 +122,7 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/CAAT" target="_blank"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://github.com/seangrate/CAAT" target="_blank"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>CAAT</b></p>
         <p>A tool to help analyze course alignment.</p>
@@ -136,14 +136,14 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/MinimalOutNeighborhoods" target="_blank"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://github.com/seangrate/MinimalOutNeighborhoods" target="_blank"><img src="./images/out-neighborhoods/open_r-2.png" alt="out-neighborhoods" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Minimal Out-Neighborhoods</b></p>
         <p>Python scripts for computing minimal out-neighborhoods (and some statistics) in the \( F \)-lattice.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://github.com/TheGrateSalmon/Tropical-Curves" target="_blank"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://github.com/seangrate/Tropical-Curves" target="_blank"><img src="./images/tropical/tropical_curve.png" alt="tropical-curve" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Tropical Curves</b></p>
         <p>Python scripts for visualizing tropical curves.</p>
