--- a/travel/condensed.html
+++ b/travel/condensed.html
@@ -64,6 +64,11 @@
         </li>
         <br>
         <li>
+          Macaulay2 Workshop
+          <span style="float:right">July 2025</span>
+        </li>
+        <br>
+        <li>
           Collaborate@ICERM
           <span style="float:right">June 2025</span>
         </li>
@@ -71,6 +76,11 @@
         <li>
           Workshop on Weak and Strong Lefschetz Properties Across Mathematics
           <span style="float:right">June 2025</span>
+        </li>
+        <br>
+        <li>
+          Workshop on the Applications of Commutative Algebra
+          <span style="float:right">May 2025</span>
         </li>
         <br>
         <li>
