--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <li>
         <div>
           <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2401.10492" target="_blank">Betti numbers for connected sums of graded Gorenstein artinian algebras</a></span>
-          <span style="float:right; width:30%"><em>Transactions of the AMS</em></span>
+          <span style="float:right; width:30%"><em>Transactions of the AMS, 2025</em></span>
         </div>
         <br>
         <span style="display:inline-block; width:50%"><em>
@@ -222,7 +222,7 @@
       <li>
         <div>
           <span style="display:inline-block; width:50%"><a class="weblink" href="https://arxiv.org/abs/2307.13126" target="_blank">Betti tables forcing failure of the Weak Lefschetz Property</a></span>
-          <span style="float:right; width:30%"><em>Lefschetz Properties: Current and New Directions, Springer INdAM series</em></span>
+          <span style="float:right; width:30%"><em>Lefschetz Properties: Current and New Directions, Springer INdAM series. 2024</em></span>
         </div>
         <br>
         <span style="display:inline-block; width:50%"><em>
