--- a/travel/index.html
+++ b/travel/index.html
@@ -110,6 +110,11 @@
     location: 'University of Wisconsin-Madison',
     city: 'Madison, WI',
     extras: { } },
+  { title: 'Mcaualay2 Workshop', 
+    date: new Date(2025, 7), 
+    location: 'University of Wisconsin-Madison',
+    city: 'Madison, WI',
+    extras: { } },
   { title: 'Collaborate@ICERM', 
     date: new Date(2025, 6), 
     location: 'ICERM',
@@ -119,6 +124,11 @@
     date: new Date(2025, 6), 
     location: 'Sophus Lie Conference Center',
     city: 'Nordfjordeid, Norway',
+    extras: { } },
+  { title: 'Workshop on the Applications of Commutative Algebra', 
+    date: new Date(2025, 5), 
+    location: 'Fields Institute',
+    city: 'Toronto, ON',
     extras: { } },
   { title: 'AWM Research Symposium', 
     date: new Date(2025, 5), 
