--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
+      <a class="weblink" href="https://github.com/Macaulay2/Workshop-2025-Tulane/tree/YoungTableaux" target="_blank"><img src="./images/tableaux.png" alt="tableaux" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p style="font-family: Lucida Console, monospace;"><b>YoungTableaux</b></p>
+        <p>A Macaulay2 package implementing Young diagrams and tableaux.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container w3-margin-bottom">
       <a class="weblink" href="https://github.com/seangrate/CAAT" target="_blank"><img src="./images/caat/alignment_7.png" alt="caat" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>CAAT</b></p>
@@ -129,7 +136,7 @@
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/Permutations/html/index.html" target="_blank"><img src="./images/permutations.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
+      <a class="weblink" href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/Permutations/html/index.html" target="_blank"><img src="./images/permutations.png" alt="permutations" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p style="font-family: Lucida Console, monospace;"><b>Permutations</b></p>
         <p>A Macaulay2 package implementing permutations.</p>
